inner columns gap css fix

--- a/assets/css/lollum-page-builder.scss
+++ b/assets/css/lollum-page-builder.scss
@@ -41,11 +41,6 @@
 		padding-right: 15px;
 	}
 
-	&.columns-gap-no-gap {
-		padding-top: 0;
-		padding-bottom: 0;
-	}
-
 	&.row-stretch-boxed,
 	&.row-stretch-full-boxed {
 		.lpb-page-row {
